--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "typescript": "4.9.4"
-    }
+    },
+    "license": "SEE LICENSE IN LICENSE"
 }
