--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
         "react-dom": "18.2.0",
         "typescript": "4.9.4"
     },
-    "license": "SEE LICENSE IN LICENSE"
+    "license": "SEE LICENSE IN LICENSE",
+    "description": "First, run the development server:"
 }
