--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
         "typescript": "4.9.4"
     },
     "license": "SEE LICENSE IN LICENSE",
-    "description": "First, run the development server:"
+    "description": "First, run the development server:",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hejny/rapid-prototyping-wizard"
+    }
 }
