✍🏻 Description of the project into package.json
🔼 This commit was automatically generated by [Batch project editor](https://github.com/hejny/batch-project-editor) using workflow description

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "typescript": "4.9.4"
     },
     "license": "SEE LICENSE IN LICENSE",
-    "description": "First, run the development server:",
+    "description": "Utilize edge new exponential technoligies in your project and business",
     "repository": {
         "type": "git",
         "url": "https://github.com/hejny/rapid-prototyping-wizard"
