--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build && next export",
-        "deploy": "gh-pages --dist ./.next/static",
+        "deploy": "gh-pages --dist ./out",
         "start": "next start",
         "lint": "next lint",
         "test": "echo \"No tests yet\""
