--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
         "deploy": "gh-pages --dist ./out",
         "start": "next start",
         "lint": "next lint",
-        "test": "echo \"No tests yet\""
+        "test": "echo \"No tests yet\"",
+        "prettier-commit": "git diff --exit-code && npm run prettier && git add . && git commit --allow-empty -m \"🧹 Prettier\"",
+        "preversion": "git pull && npm run prettier-commit&& npm run lint && npm test",
+        "postversion": "git push && git push --tags && npm run deploy"
     },
     "dependencies": {
         "@next/font": "13.1.1",
@@ -29,6 +32,7 @@
         "typescript": "4.9.4"
     },
     "devDependencies": {
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "prettier": "^2.8.1"
     }
 }
