--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "prettier": "prettier --config .prettierrc --ignore-unknown --write \"{pages,public,styles}/**/*\"",
         "prettier-commit": "git diff --exit-code && npm run prettier && git add . && git commit --allow-empty -m \"🧹 Prettier\"",
         "preversion": "git pull && npm run prettier-commit&& npm run lint && npm test",
-        "postversion": "git push && git push --tags && npm run deploy"
+        "postversion": "git push && git push --tags"
     },
     "dependencies": {
         "@next/font": "13.1.1",
