--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "typescript": "4.9.4"
     },
     "devDependencies": {
-        "gh-pages": "^4.0.0",
-        "prettier": "^2.8.1"
+        "gh-pages": "4.0.0",
+        "prettier": "2.8.1"
     }
 }
