--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "rapid-prototyping-wizard",
-    "version": "0.1.5",
+    "version": "0.1.6",
     "private": false,
     "license": "SEE LICENSE IN LICENSE",
     "description": "Utilize edge new exponential technoligies in your project and business",
@@ -33,7 +33,7 @@
         "typescript": "4.9.4"
     },
     "devDependencies": {
-        "gh-pages": "4.0.0",
-        "prettier": "2.8.1"
+        "gh-pages": "^4.0.0",
+        "prettier": "^2.8.1"
     }
 }
