--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "scripts": {
         "dev": "next dev",
-        "build": "rm -rf ./out && next build && next export && echo \"prototyping.hejny.org\" > ./out/CNAME && echo \"\" > ./out/.nojekyll",
+        "build": "rm -rf ./out && next build && next export && echo prototyping.hejny.org > ./out/CNAME && echo > ./out/.nojekyll",
         "start": "next start",
         "lint": "next lint",
         "test": "echo \"No tests yet\"",
