--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
         "next": "13.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "styled-components": "^5.3.6",
         "typescript": "4.9.4"
     },
     "devDependencies": {
+        "@types/styled-components": "^5.1.26",
         "gh-pages": "^4.0.0",
         "prettier": "^2.8.1"
     }
