Script for expose

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "url": "https://github.com/hejny/rapid-prototyping-wizard"
     },
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev -p 4455",
         "build": "rm -rf ./out && next build && next export && echo prototyping.hejny.org > ./out/CNAME && echo > ./out/.nojekyll",
         "start": "next start",
         "lint": "next lint",
@@ -36,6 +36,7 @@
     "devDependencies": {
         "@types/styled-components": "^5.1.26",
         "gh-pages": "^4.0.0",
+        "localtunnel": "^2.0.2",
         "prettier": "^2.8.1"
     }
 }
