--- a/package.json
+++ b/package.json
@@ -21,20 +21,28 @@
         "postversion": "git push && git push --tags"
     },
     "dependencies": {
-        "@next/font": "13.1.1",
-        "@types/node": "18.11.18",
-        "@types/react": "18.0.26",
-        "@types/react-dom": "18.0.10",
-        "eslint": "8.31.0",
-        "eslint-config-next": "13.1.1",
         "next": "13.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
-        "typescript": "4.9.4"
+        "typescript": "4.4.4",
+        "waitasecond": "^1.11.1"
     },
     "devDependencies": {
+        "@next/font": "13.1.1",
+        "@types/node": "18.11.18",
+        "@types/prettier": "^2.7.2",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
+        "chalk": "4.1.2",
+        "commander": "^9.4.1",
+        "eslint": "8.31.0",
+        "eslint-config-next": "13.1.1",
         "gh-pages": "^4.0.0",
+        "glob-promise": "^6.0.1",
         "localtunnel": "^2.0.2",
-        "prettier": "^2.8.1"
+        "n12": "^1.1.1",
+        "prettier": "^2.8.1",
+        "spacetrim": "^0.9.0",
+        "ts-node": "^10.9.1"
     }
 }
