--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
         "postversion": "git push && git push --tags"
     },
     "dependencies": {
+        "@types/styled-components": "^5.1.26",
         "next": "13.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "styled-components": "^5.3.6",
         "typescript": "4.4.4",
         "waitasecond": "^1.11.1",
         "xyzt": "^5.4.0"
