--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "prettier": "prettier --config .prettierrc --ignore-unknown --write \"{pages,public,styles}/**/*\"",
         "prettier-commit": "git diff --exit-code && npm run prettier && git add . && git commit --allow-empty -m \"🧹 Prettier\"",
         "preversion": "git pull && npm run prettier-commit&& npm run lint && npm test",
-        "postversion": "git push && git push --tags"
+        "postversion": "git push && git push --tags && echo \"Look here to check the deploy process:\nhttps://github.com/hejny/rapid-prototyping-wizard/actions/\""
     },
     "dependencies": {
         "@types/styled-components": "5.1.26",
