--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "dependencies": {
         "@types/styled-components": "5.1.26",
-        "destroyable": "^0.12.0",
+        "destroyable": "0.12.0",
         "next": "13.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -37,7 +37,7 @@
         "@types/prettier": "2.7.2",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
-        "@types/showdown": "^2.0.0",
+        "@types/showdown": "2.0.0",
         "chalk": "4.1.2",
         "commander": "9.4.1",
         "eslint": "8.31.0",
@@ -45,11 +45,11 @@
         "gh-pages": "4.0.0",
         "glob-promise": "6.0.1",
         "localtunnel": "2.0.2",
-        "markdown-to-txt": "^2.0.1",
+        "markdown-to-txt": "2.0.1",
         "n12": "1.3.0",
-        "node-fetch": "^3.3.0",
+        "node-fetch": "3.3.0",
         "prettier": "2.8.1",
-        "showdown": "^2.1.0",
+        "showdown": "2.1.0",
         "spacetrim": "0.9.0",
         "ts-node": "10.9.1"
     }
