--- a/package.json
+++ b/package.json
@@ -1,1 +1,56 @@
-undefined
+{
+    "name": "rapid-prototyping-wizard",
+    "version": "0.18.0",
+    "private": false,
+    "license": "SEE LICENSE IN LICENSE",
+    "description": "Utilize edge new exponential technoligies in your project and business",
+    "homepage": "https://prototyping.hejny.org/",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hejny/rapid-prototyping-wizard"
+    },
+    "scripts": {
+        "dev": "next dev -p 4455",
+        "build": "rm -rf ./out && next build && next export && echo prototyping.hejny.org > ./out/CNAME && echo > ./out/.nojekyll",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "echo \"No tests yet\"",
+        "prettier": "prettier --config .prettierrc --ignore-unknown --write \"{pages,public,styles}/**/*\"",
+        "prettier-commit": "git diff --exit-code && npm run prettier && git add . && git commit --allow-empty -m \"🧹 Prettier\"",
+        "preversion": "git pull && npm run prettier-commit&& npm run lint && npm test",
+        "postversion": "git push && git push --tags && echo \"Check the deploy process: https://github.com/hejny/rapid-prototyping-wizard/actions/\""
+    },
+    "dependencies": {
+        "@types/styled-components": "5.1.26",
+        "destroyable": "0.12.0",
+        "next": "13.1.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "styled-components": "5.3.6",
+        "typescript": "4.4.4",
+        "waitasecond": "1.11.1",
+        "xyzt": "5.4.0"
+    },
+    "devDependencies": {
+        "@next/font": "13.1.1",
+        "@types/node": "18.11.18",
+        "@types/prettier": "2.7.2",
+        "@types/react": "18.0.26",
+        "@types/react-dom": "18.0.10",
+        "@types/showdown": "2.0.0",
+        "chalk": "4.1.2",
+        "commander": "9.4.1",
+        "eslint": "8.31.0",
+        "eslint-config-next": "13.1.1",
+        "gh-pages": "4.0.0",
+        "glob-promise": "6.0.1",
+        "localtunnel": "2.0.2",
+        "markdown-to-txt": "2.0.1",
+        "n12": "1.3.0",
+        "node-fetch": "3.3.0",
+        "prettier": "2.8.1",
+        "showdown": "2.1.0",
+        "spacetrim": "0.9.0",
+        "ts-node": "10.9.1"
+    }
+}
