--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "rapid-prototyping-wizard",
-    "version": "0.19.0",
+    "version": "0.20.0",
     "private": false,
     "license": "SEE LICENSE IN LICENSE",
-    "description": "I am open to pull requests, feedback, and suggestions. Or if you like this utility, you can ☕ buy me a coffee or donate via cryptocurrencies.",
+    "description": "Utilize edge new exponential technoligies in your project and business",
     "homepage": "https://prototyping.hejny.org/",
     "repository": {
         "type": "git",
