--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+    "jest.pathToConfig": "jest.config.ts",
+    "jestrunner.jestCommand": "npm run test-unit --",
     "files.eol": "\n",
     "editor.formatOnSave": true,
     "prettier.configPath": ".prettierrc",
