--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        "isolatedModules": false,
         "downlevelIteration": true,
         "jsx": "preserve",
         "incremental": true
