--- a/package.json
+++ b/package.json
@@ -24,17 +24,6 @@
         "preversion": "git pull && npm run prettier-commit&& npm run lint && npm test",
         "postversion": "git push && git push --tags && echo \"Check the deploy process: https://github.com/hejny/rapid-prototyping-wizard/actions/\""
     },
-    "dependencies": {
-        "@types/styled-components": "5.1.26",
-        "destroyable": "0.12.0",
-        "next": "13.1.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "styled-components": "5.3.6",
-        "typescript": "4.4.4",
-        "waitasecond": "1.11.1",
-        "xyzt": "5.4.0"
-    },
     "devDependencies": {
         "@next/font": "13.1.1",
         "@types/jest": "^29.2.6",
@@ -43,22 +32,32 @@
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
         "@types/showdown": "2.0.0",
+        "@types/styled-components": "5.1.26",
         "chalk": "4.1.2",
         "commander": "9.4.1",
         "cypress": "^12.3.0",
+        "destroyable": "0.12.0",
         "eslint": "8.31.0",
         "eslint-config-next": "13.1.1",
         "gh-pages": "4.0.0",
         "glob-promise": "6.0.1",
         "jest": "^29.4.0",
+        "jest-environment-jsdom": "^29.4.0",
         "localtunnel": "2.0.2",
         "markdown-to-txt": "2.0.1",
         "n12": "1.3.0",
+        "next": "13.1.1",
         "node-fetch": "3.3.0",
         "prettier": "2.8.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "showdown": "2.1.0",
         "spacetrim": "0.9.0",
+        "styled-components": "5.3.6",
         "ts-jest": "^29.0.5",
-        "ts-node": "10.9.1"
+        "ts-node": "10.9.1",
+        "typescript": "4.4.4",
+        "waitasecond": "1.11.1",
+        "xyzt": "5.4.0"
     }
 }
