--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,28 +6,8 @@ on:
             - 'v*'
 
 jobs:
-    test:
-        name: Test + Lint
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - uses: actions/setup-node@v1
-              with:
-                  node-version: 17
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Lint
-              run: npm run lint
-
-            - name: Unit test
-              run: npm run test-unit
-              env:
-                  NODE_OPTIONS: --openssl-legacy-provider
-
     deploy:
-        name: Publish on Github pages
+        name: Deploy the page
         needs: test
         runs-on: ubuntu-latest
         steps:
@@ -47,6 +27,12 @@ jobs:
 
             - name: Generate patterns library
               run: ts-node ./scripts/generate-projects-library/generate-patterns-library.ts --commit
+
+            - name: Lint
+              run: npm run lint
+
+            - name: Unit test
+              run: npm run test-unit
 
             - name: Build
               run: npm run build
