--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
             - name: Unit test
               run: npm run test-unit
 
+            - name: Integration test
+              run: npm run integration-unit
+
             - name: Build
               run: npm run build
               env:
