--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "lint": "next lint",
         "test": "npm run test-unit && npm run test-integration",
         "test-unit": "jest",
-        "test-integration": "./node_modules/.bin/cypress run",
+        "test-integration": "ts-node ./scripts/integration-test-with-server/integration-test-with-server.ts",
+        "test-integration-without-server": "./node_modules/.bin/cypress run",
         "test-integration-interactive": "./node_modules/.bin/cypress open",
         "test-with-lighthouse": " lighthouse https://collboard.com/ --output html --output-path ./other/lighthouse-reports/report.html --view",
         "prettier": "prettier --config .prettierrc --ignore-unknown --write \"{pages,public,styles}/**/*\"",
