Fixing test-integration in CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
               run: npm run test-unit
 
             - name: Integration test
-              run: npm run integration-unit
+              run: npm run test-integration
 
             - name: Build
               run: npm run build
