--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "devDependencies": {
         "@next/font": "13.1.1",
+        "@types/isomorphic-fetch": "^0.0.36",
         "@types/jest": "29.2.6",
         "@types/node": "18.11.18",
         "@types/prettier": "2.7.2",
@@ -48,7 +49,6 @@
         "markdown-to-txt": "2.0.1",
         "n12": "1.3.0",
         "next": "13.1.1",
-        "node-fetch": "3.3.0",
         "prettier": "2.8.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
@@ -59,6 +59,7 @@
         "ts-node": "10.9.1",
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
-        "xyzt": "5.4.0"
+        "xyzt": "5.4.0",
+        "isomorphic-fetch": "^3.0.0"
     }
 }
