Tests should pass - Fix CI

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
             - name: Build
               run: npm run build
               env:
+                  # !! Remove openssl-legacy-provider ACRY
                   NODE_OPTIONS: --openssl-legacy-provider
 
             - name: Configurate GIT
