--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,11 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
-            name: Lint
-            run: npm run lint
+            - name: Lint
+              run: npm run lint
 
-            name: Unit test
-            run: npm run test-unit
+            - name: Unit test
+              run: npm run test-unit
 
             - name: Integration test
               run: npm run test-integration
