--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "eslint-config-next": "13.1.1",
         "gh-pages": "4.0.0",
         "glob-promise": "6.0.1",
+        "isomorphic-fetch": "^3.0.0",
         "jest": "29.4.0",
         "jest-environment-jsdom": "29.4.0",
         "localtunnel": "2.0.2",
@@ -56,10 +57,9 @@
         "spacetrim": "0.9.0",
         "styled-components": "5.3.6",
         "ts-jest": "29.0.5",
-        "ts-node": "10.9.1",
+        "ts-node": "^10.9.1",
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
-        "xyzt": "5.4.0",
-        "isomorphic-fetch": "^3.0.0"
+        "xyzt": "5.4.0"
     }
 }
