--- a/.github/workflows/xtsnode.yml
+++ b/.github/workflows/xtsnode.yml
@@ -23,10 +23,10 @@ jobs:
               run: npm ci
 
             - name: Generate projects library
-              run: ts-node ./scripts/generate-projects-library/generate-projects-library.ts --commit
+              run: npx ts-node ./scripts/generate-projects-library/generate-projects-library.ts --commit
 
             - name: Generate wallpapers library
-              run: ts-node ./scripts/generate-projects-library/generate-wallpapers-library.ts --commit
+              run: npx ts-node ./scripts/generate-projects-library/generate-wallpapers-library.ts --commit
 
             - name: Generate patterns library
-              run: ts-node ./scripts/generate-projects-library/generate-patterns-library.ts --commit
+              run: npx ts-node ./scripts/generate-projects-library/generate-patterns-library.ts --commit
