--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,14 +18,14 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
-            # restore!!> - name: Generate projects library
-            # restore!!>   run: ts-node ./scripts/generate-projects-library/generate-projects-library.ts --commit
+            - name: Generate projects library
+              run: npx ts-node ./scripts/generate-projects-library/generate-projects-library.ts --commit
 
-            # restore!!> - name: Generate wallpapers library
-            # restore!!>   run: ts-node ./scripts/generate-projects-library/generate-wallpapers-library.ts --commit
+            - name: Generate wallpapers library
+              run: npx ts-node ./scripts/generate-projects-library/generate-wallpapers-library.ts --commit
 
-            # restore!!> - name: Generate patterns library
-            # restore!!>   run: ts-node ./scripts/generate-projects-library/generate-patterns-library.ts --commit
+            - name: Generate patterns library
+              run: npx ts-node ./scripts/generate-projects-library/generate-patterns-library.ts --commit
 
             - name: Lint
               run: npm run lint
@@ -38,9 +38,6 @@ jobs:
 
             - name: Build
               run: npm run build
-              env:
-                  # !! Remove openssl-legacy-provider ACRY
-                  NODE_OPTIONS: --openssl-legacy-provider
 
             - name: Configurate GIT
               run: |
