--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@next/font": "13.1.1",
         "@types/isomorphic-fetch": "^0.0.36",
         "@types/jest": "29.2.6",
+        "@types/lodash": "^4.14.191",
         "@types/node": "18.11.18",
         "@types/prettier": "2.7.2",
         "@types/react": "18.0.26",
@@ -47,6 +48,7 @@
         "jest": "29.4.0",
         "jest-environment-jsdom": "29.4.0",
         "localtunnel": "2.0.2",
+        "lodash": "^4.17.21",
         "markdown-to-txt": "2.0.1",
         "n12": "1.3.0",
         "next": "13.1.1",
