--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "scripts": {
         "dev": "next dev -p 4455",
-        "build": "rm -rf ./out && next build && next export && echo prototyping.hejny.org > ./out/CNAME && echo > ./out/.nojekyll",
+        "build": "rm -rf ./out && next build && next export && next-export-optimize-images && echo prototyping.hejny.org > ./out/CNAME && echo > ./out/.nojekyll",
         "start": "next start",
         "lint": "next lint",
         "test": "npm run test-unit && npm run test-integration",
@@ -52,6 +52,7 @@
         "markdown-to-txt": "2.0.1",
         "n12": "1.3.0",
         "next": "13.1.1",
+        "next-export-optimize-images": "^2.0.0",
         "prettier": "2.8.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
