--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "markdown-to-txt": "2.0.1",
         "n12": "1.3.0",
         "next": "13.1.1",
-        "next-export-optimize-images": "^2.0.0",
+        "next-export-optimize-images": "2.0.0",
         "prettier": "2.8.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
