Pseudo-random shuffle

--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
         "xyzt": "5.4.0"
+    },
+    "dependencies": {
+        "@types/seedrandom": "^3.0.4",
+        "seedrandom": "^3.0.5"
     }
 }
