--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,7 @@ jobs:
               run: npm run build
 
             - name: Deploy on GitHub pages
-              run: npx gh-pages --dotfiles --dist ./out --repo https://x-access-token:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git
-
+              run: npx gh-pages --dotfiles --dist ./build --repo https://x-access-token:${{secrets.GITHUB_TOKEN}}@github.com/${GITHUB_REPOSITORY}.git
 # TODO: [0] Make this work - Now there is error after running generate-projects-library
 #
 #       import background from '../Hedu/outline.svg';
