--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
         "xyzt": "5.4.0",
-        "@types/seedrandom": "^3.0.4",
-        "seedrandom": "^3.0.5"
+        "@types/seedrandom": "3.0.4",
+        "seedrandom": "3.0.5"
     }
 }
