--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/prettier": "2.7.2",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
+        "@types/seedrandom": "3.0.4",
         "@types/showdown": "2.0.0",
         "@types/styled-components": "5.1.26",
         "chalk": "4.1.2",
@@ -44,6 +45,7 @@
         "eslint-config-next": "13.1.1",
         "gh-pages": "4.0.0",
         "glob-promise": "6.0.1",
+        "i18next": "^22.4.11",
         "isomorphic-fetch": "3.0.0",
         "jest": "29.4.0",
         "jest-environment-jsdom": "29.4.0",
@@ -53,9 +55,12 @@
         "n12": "1.3.0",
         "next": "13.1.1",
         "next-export-optimize-images": "2.0.0",
+        "next-i18next": "^13.2.2",
         "prettier": "2.8.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-i18next": "^12.2.0",
+        "seedrandom": "3.0.5",
         "showdown": "2.1.0",
         "spacetrim": "0.9.0",
         "styled-components": "5.3.6",
@@ -63,8 +68,6 @@
         "ts-node": "10.9.1",
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
-        "xyzt": "5.4.0",
-        "@types/seedrandom": "3.0.4",
-        "seedrandom": "3.0.5"
+        "xyzt": "5.4.0"
     }
 }
