--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "next": "13.1.1",
         "next-export-optimize-images": "2.0.0",
         "next-i18next": "^13.2.2",
+        "next-language-detector": "^1.0.2",
         "prettier": "2.8.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
