--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "scripts": {
         "dev": "next dev -p 4455",
-        "build": "rm -rf ./build && next build && next export -o build && next-export-optimize-images && echo prototyping.hejny.org > ./build/CNAME && echo > ./build/.nojekyll",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint",
         "test": "npm run test-unit && npm run test-integration",
