--- a/package.json
+++ b/package.json
@@ -25,8 +25,30 @@
         "preversion": "git pull && npm run prettier-commit && npm run lint && npm test",
         "postversion": "git push && git push --tags && echo \"Check the deploy process: https://github.com/hejny/rapid-prototyping-wizard/actions/\""
     },
-    "devDependencies": {
+    "dependencies": {
         "@next/font": "13.1.1",
+        "destroyable": "0.12.0",
+        "i18next": "^22.4.11",
+        "isomorphic-fetch": "3.0.0",
+        "lodash": "4.17.21",
+        "markdown-to-txt": "2.0.1",
+        "n12": "1.3.0",
+        "next": "13.1.1",
+        "next-i18next": "^13.2.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-i18next": "^12.2.0",
+        "seedrandom": "3.0.5",
+        "showdown": "2.1.0",
+        "showdown-highlight": "^3.1.0",
+        "spacetrim": "0.9.0",
+        "styled-components": "5.3.6",
+        "typescript": "4.9.4",
+        "waitasecond": "1.11.1",
+        "xyzt": "5.4.0"
+    },
+    "devDependencies": {
+       
         "@types/isomorphic-fetch": "0.0.36",
         "@types/jest": "29.2.6",
         "@types/lodash": "4.14.191",
@@ -40,35 +62,21 @@
         "chalk": "4.1.2",
         "commander": "9.4.1",
         "cypress": "12.3.0",
-        "destroyable": "0.12.0",
+        
         "eslint": "8.31.0",
         "eslint-config-next": "13.1.1",
         "gh-pages": "4.0.0",
         "glob-promise": "6.0.1",
-        "i18next": "^22.4.11",
-        "isomorphic-fetch": "3.0.0",
+      
         "jest": "29.4.0",
         "jest-environment-jsdom": "29.4.0",
         "jsdom": "^21.1.1",
-        "localtunnel": "2.0.2",
-        "lodash": "4.17.21",
-        "markdown-to-txt": "2.0.1",
-        "n12": "1.3.0",
-        "next": "13.1.1",
-        "next-i18next": "^13.2.2",
+       
+       
         "prettier": "2.8.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-i18next": "^12.2.0",
-        "seedrandom": "3.0.5",
-        "showdown": "2.1.0",
-        "showdown-highlight": "^3.1.0",
-        "spacetrim": "0.9.0",
-        "styled-components": "5.3.6",
+        
         "ts-jest": "29.0.5",
-        "ts-node": "10.9.1",
-        "typescript": "4.9.4",
-        "waitasecond": "1.11.1",
-        "xyzt": "5.4.0"
+        "ts-node": "10.9.1"
+       
     }
 }
