--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "@next/font": "13.1.1",
+        "configchecker": "^1.5.1",
         "destroyable": "0.12.0",
         "i18next": "^22.4.11",
         "isomorphic-fetch": "3.0.0",
