--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "react-dom": "18.2.0",
         "react-i18next": "12.2.0",
         "seedrandom": "3.0.5",
+        "sharp": "^0.31.3",
         "showdown": "2.1.0",
         "showdown-highlight": "3.1.0",
         "spacetrim": "0.9.0",
