--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "devDependencies": {
         "@types/isomorphic-fetch": "0.0.36",
         "@types/jest": "29.2.6",
+        "@types/js-yaml": "^4.0.5",
         "@types/lodash": "4.14.191",
         "@types/node": "18.11.18",
         "@types/prettier": "2.7.2",
@@ -68,6 +69,7 @@
         "glob-promise": "6.0.1",
         "jest": "29.4.0",
         "jest-environment-jsdom": "29.4.0",
+        "js-yaml": "^4.1.0",
         "jsdom": "21.1.1",
         "prettier": "2.8.1",
         "ts-jest": "29.0.5",
