--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "n12": "1.3.0",
         "next": "13.1.1",
         "next-i18next": "13.2.2",
+        "openmoji": "^14.0.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-i18next": "12.2.0",
