--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@next/font": "13.1.1",
         "configchecker": "1.5.1",
         "destroyable": "0.12.0",
+        "html-react-parser": "^3.0.12",
         "i18next": "22.4.11",
         "isomorphic-fetch": "3.0.0",
         "lodash": "4.17.21",
