Use www.pavolhejny.com not prototyping.hejny.org

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": false,
     "license": "SEE LICENSE IN LICENSE",
     "description": "Utilize edge new exponential technoligies in your project and business",
-    "homepage": "https://prototyping.hejny.org/",
+    "homepage": "https://www.pavolhejny.com/",
     "repository": {
         "type": "git",
         "url": "https://github.com/hejny/rapid-prototyping-wizard"
