✍🏻 Description of the project into package.json
🔼 This commit was automatically generated by [Batch project editor](https://github.com/hejny/batch-project-editor) using workflow description

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.53.0",
     "private": false,
     "license": "SEE LICENSE IN LICENSE",
-    "description": "Utilize edge new exponential technoligies in your project and business",
+    "description": "-->",
     "homepage": "https://www.pavolhejny.com/",
     "repository": {
         "type": "git",
