--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "xyzt": "5.4.0"
     },
     "devDependencies": {
+        "@total-typescript/ts-reset": "^0.4.2",
         "@types/isomorphic-fetch": "0.0.36",
         "@types/jest": "29.2.6",
         "@types/js-yaml": "^4.0.5",
