--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "nonce": 1,
     "license": "SEE LICENSE IN LICENSE",
     "description": "-->",
+    "engines": {
+        "node": "^20.0.0 || ^22.0.0"
+    },
+    "packageManager": "npm@10.8.0",
     "homepage": "https://www.pavolhejny.com/",
     "repository": {
         "type": "git",
@@ -57,7 +61,7 @@
         "@types/jest": "29.2.6",
         "@types/js-yaml": "4.0.5",
         "@types/lodash": "4.14.191",
-        "@types/node": "18.11.18",
+        "@types/node": "^20.11.30",
         "@types/prettier": "2.7.2",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
