Generating PDFs from documents

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
         "next": "13.1.1",
         "next-i18next": "13.2.2",
         "openmoji": "14.0.0",
+        "pdfkit": "0.15.0",
+        "puppeteer": "^24.16.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-i18next": "12.2.0",
@@ -55,8 +57,7 @@
         "spacetrim": "0.9.0",
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
-        "xyzt": "^5.4.0",
-        "pdfkit": "0.15.0"
+        "xyzt": "^5.4.0"
     },
     "devDependencies": {
         "@types/isomorphic-fetch": "0.0.36",
