The BackgroundCanvas component should be in the /utilities/background folder.  a simple application that uses the canvas element. It works by displaying a colour gradient background within these canvases. However, the colour gradient has many different keyframes, or key points. Each point can have its own colour. These points can move, creating some animation. At the same time, I would like the gradient to be slightly noisy, but still elegant. I would like it to actually look a little noisy, like a colour gradient that I can define myself.
You have examples of such a backgrounds in the attachment

Use packages  `@promptbook/color` and `xyzt`

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dependencies": {
         "@calcom/embed-react": "^1.5.1",
         "@next/font": "13.1.1",
+        "@promptbook/color": "^0.101.0-5",
         "@promptbook/markdown-utils": "^0.101.0-5",
         "configchecker": "1.5.1",
         "destroyable": "0.12.0",
@@ -60,7 +61,7 @@
         "spacetrim": "0.9.0",
         "typescript": "4.9.4",
         "waitasecond": "1.11.1",
-        "xyzt": "^5.4.0"
+        "xyzt": "^5.4.3"
     },
     "devDependencies": {
         "@types/isomorphic-fetch": "0.0.36",
