--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "dependencies": {
         "@calcom/embed-react": "^1.5.1",
         "@next/font": "13.1.1",
-        "@promptbook/color": "^0.101.0-5",
-        "@promptbook/markdown-utils": "^0.101.0-5",
+        "@promptbook/color": "0.101.0-7",
+        "@promptbook/markdown-utils": "0.101.0-7",
         "configchecker": "1.5.1",
         "destroyable": "0.12.0",
         "html-react-parser": "3.0.12",
