--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@calcom/embed-react": "^1.5.1",
         "@next/font": "13.1.1",
         "@promptbook/color": "0.101.0-7",
+        "@promptbook/utils": "0.101.0-7",
         "@promptbook/markdown-utils": "0.101.0-7",
         "configchecker": "1.5.1",
         "destroyable": "0.12.0",
