--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "dependencies": {
         "@calcom/embed-react": "^1.5.1",
         "@next/font": "13.1.1",
-        "@promptbook/color": "0.101.0-16",
-        "@promptbook/utils": "0.101.0-16",
-        "@promptbook/markdown-utils": "0.101.0-16",
+        "@promptbook/color": "0.102.0-8",
+        "@promptbook/markdown-utils": "0.102.0-8",
+        "@promptbook/utils": "0.102.0-8",
         "configchecker": "1.5.1",
         "destroyable": "0.12.0",
         "html-react-parser": "3.0.12",
@@ -53,6 +53,7 @@
         "openmoji": "14.0.0",
         "pdfkit": "0.15.0",
         "puppeteer": "^24.16.2",
+        "qrcode.react": "^4.2.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-i18next": "12.2.0",
@@ -72,6 +73,7 @@
         "@types/lodash": "4.14.191",
         "@types/node": "^20.11.30",
         "@types/prettier": "2.7.2",
+        "@types/qrcode.react": "^1.0.5",
         "@types/react": "18.0.26",
         "@types/react-dom": "18.0.10",
         "@types/seedrandom": "3.0.4",
