--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
         "@promptbook/color": "0.103.0-37",
         "@promptbook/markdown-utils": "0.103.0-37",
         "@promptbook/utils": "0.103.0-37",
+        "@supabase/ssr": "^0.7.0",
+        "@supabase/supabase-js": "^2.81.1",
         "configchecker": "1.5.1",
         "destroyable": "0.12.0",
         "html-react-parser": "3.0.12",
